fix for booking widget flicker and passenger selector mobile view issue

--- a/blocks/booking/booking.css
+++ b/blocks/booking/booking.css
@@ -2728,6 +2728,10 @@ body,html {
     min-width: 20pc
 }
 
+.booking-form {
+    --bs-gutter-x: 1.5rem;
+}
+
 .booking-form .mat-tab-label-active .mat-icon {
     background-color: #cd333e
 }
@@ -3113,7 +3117,8 @@ body,html {
 
 
 button {
-    border-radius: 0
+    border-radius: 0;
+    margin: 0;
 }
 
 
@@ -3138,12 +3143,11 @@ button {
 .row {
     --bs-gutter-x: 1.5rem;
     --bs-gutter-y: 0;
-
     display: flex;
     flex-wrap: wrap;
-    margin-left: calc(var(--bs-gutter-x)*- .5);
-    margin-right: calc(var(--bs-gutter-x)*- .5);
-    margin-top: calc(var(--bs-gutter-y)*- 1)
+    margin-top: calc(-1* var(--bs-gutter-y));
+    margin-right: calc(-.5* var(--bs-gutter-x));
+    margin-left: calc(-.5* var(--bs-gutter-x));
 }
 
 .row>* {
@@ -12350,4 +12354,36 @@ main .section.booking-container .booking-wrapper {
 
 .booking .tooltip {
     text-align: left;
+}
+
+.offcanvas.offcanvas-bottom {
+    height: auto;
+    z-index: 999999;
+}
+
+.offcanvas.offcanvas-bottom .offcanvas-header {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.offcanvas.offcanvas-bottom .offcanvas-title {
+    line-height: 1.5;
+    margin: 0;
+}
+
+.offcanvas.offcanvas-bottom .offcanvas-body {
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 1rem;
+}
+
+#searchflightangularselecter .booking-form {
+    padding: 24px;
+}
+
+#searchflightangularselecter .booking-form .container-fluid {
+    padding-left: 12px;
+    padding-right: 12px;
 }
